fix spacing issue with maps

--- a/src/components/ContactMaps/styles.module.scss
+++ b/src/components/ContactMaps/styles.module.scss
@@ -12,7 +12,7 @@ $breakpoints: (
 }
 
 .container {
-  padding: 3rem 0 11.3rem;
+  padding: 9.6rem 0 11.3rem;
 
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -32,13 +32,11 @@ $breakpoints: (
   text-align: center
 }
 
-.country {
-  font-size: 1.6rem;
-  line-height: 2.4rem;
-  font-weight: 600;
+.title {
+
 }
 
-.maps {
+.learnings {
   grid-column: 2 / 3;
   grid-row: 3 / 4;
 
@@ -46,13 +44,7 @@ $breakpoints: (
   margin: 0 auto;
 
   display: grid;
-  grid-template-columns: auto minmax(auto, 18rem) auto;
-}
-
-.iframe {
-  display: grid;
-  grid-column: 2 / 3;
-  margin: 2rem auto;
+  grid-template-columns: auto minmax(auto, 12rem) auto;
 }
 
 .icon-box {
@@ -75,7 +67,10 @@ $breakpoints: (
 
 .summary {
   font-size: 1.6rem;
-  line-height: 2.4rem;
+}
+
+.country {
+  font-weight: 600;
 }
 
 .usa {
@@ -100,6 +95,10 @@ $breakpoints: (
   }
 }
 
+iframe {
+  margin-top: 2rem;
+  max-width: 100%;
+}
 
 @include media('<lower-tablet') {
   .container {
@@ -141,7 +140,7 @@ $breakpoints: (
 
   .containerTitle {
     max-width: 34rem;
-    margin-bottom: 3rem;
+    margin-bottom: 7.2rem;
   }
 
   .title {
