--- a/src/components/ContactSupport/styles.module.scss
+++ b/src/components/ContactSupport/styles.module.scss
@@ -31,9 +31,9 @@ $breakpoints: (
   grid-column: 2 / 3;
   @include proxima-semi-bold;
   font-size: 2.6rem;
-  line-height: 5.8rem;
+  line-height: 3.2rem;
   text-align: center;
-  margin-top: 2rem;
+  margin: 2rem 0;
 }
 
 .content {
