--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -18,3 +18,8 @@
   grid-column: 1/-1;
   grid-row: 2/3;
 }
+
+.ContactMaps {
+  grid-column: 1 / -1;
+  grid-row: 2 / 4;
+}
